syntax = "proto3";

package whisk.api.shared.v1;

message Test {
  /** Multi
  line /** test *\/  */
  string string = 1;
  //  Up lime
  uint32 uint32 = 2;
  Inner inner = 3; // Side line
  /**
   * Represents a book.
   * @constructor
   * @param {string} title - The title of the book.
   * @param {string} author - The author of the book.
   */
  float float = 4;

  message Inner {
    int32 int32 = 1;
    InnerInner innerInner = 2;
    Outer outer = 3;

    message InnerInner {
      int64 long = 1;
      Enum enum = 2;
      sint32 sint32 = 3;
    }
  }

  // Describes how items
  enum Enum {
    ONE = 0;
    TWO = 1;
    THREE = 2;
    FOUR = 3;
    FIVE = 4;
  }
}

message Outer {
  repeated bool bool = 1;
  double double = 2;
  repeated uint32 uint32 = 3;
  repeated string string = 4;
}
